--- a/arm vaman/arm.tex
+++ b/arm vaman/arm.tex
@@ -113,7 +113,7 @@ Which is the logic of a XOR gate
 \begin{enumerate}
 \item Connect the anode (longer leg) of the LED to PYGMY pin 21 ( on the VAMAN board.
 \item Connect the cathode (shorter leg) of the LED to a current-limiting resistor (e.g., 220 ohms).
-\item Connect the other end of the current-limiting resistor to the GND (ground) pin on the Arduino Uno.
+\item Connect the other end of the current-limiting resistor to the GND (ground) pin on the VAMAN.
 \item Use PYGMY pin 22,23 on the VAMAN board to give the input manually.
 \end{enumerate}
 
